objects/Purchase_Order__c.object
<CustomObject>
    <label>Purchase Order</label>
    <nameField>
        <label>Purchase Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchase Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Due_date__c</fullName>
        <defaultValue>Now()+7</defaultValue>
        <label>Due date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Order_date__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>Order date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <label>Total Price</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor_Account_Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>